--- a/index.html
+++ b/index.html
@@ -3,31 +3,30 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Your Name - Portfolio</title>
+<title>Nataly Parada - Portfolio</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
-<h1>Your Name or Fan Page Title</h1>
+<h1>I am Nataly </h1>
 </header>
 <nav>
 </nav>
 <main>
 <section>
-<h2>About Me / Introduction</h2>
-<p>This is a paragraph with some information about me or the topic of this
-page.</p>
+<h2> a little about me  / Introduction</h2>
+<p>Hello my name is Nataly Parada I am 16 years old,my birthday is on february 4th. I love animals and being with my friends,also I like sports</p>
 </section>
 <section>
-<h2>My Projects / Key Facts</h2>
-<p>This section will showcase my work or important facts.</p>
+<h2>Fun facts / interesting things about me </h2>
+<p>I am flexible,I used to practice rithmic gymnastics,I won in many competitions,I can not eat food that contains gluten.</p>
 </section>
 <section>
 <h2>Contact / More Info</h2>
-<p>Information on how to get in touch or find more resources.</p>
+<p>If yoy what to get in touch with me you can send me a text at this number right here:62136300</p>
 </section>
 </main>
 <footer>
-<p>© 2024 Your Name. All rights reserved.</p>
+<p>© 2024 Nataly All rights reserved.</p>
 </footer>
 </body>
