--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <main>
 <section>
 <h2> a little about me  / Introduction</h2>
+<span class="image 1"><img src="image 2" alt="flowers that Nataly loves" /></span>
 <p>Hello my name is Nataly Parada I am 16 years old,my birthday is on february 4th. I love animals and being with my friends,also I like sports</p>
 </section>
 <section>
@@ -23,6 +24,8 @@
 </section>
 <section>
 <h2>Contact / More Info</h2>
+<span class="image 3"><img src="image 4" alt="photos Nataly like" /></span>
+
 <p>If yoy what to get in touch with me you can send me a text at this number right here:62136300</p>
 </section>
 </main>
