--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
 <section>
 <h2> a little about me  / Introduction</h2>
 <span class="image 1.jpg">
-<img src="image 2.jpg" alt="flowers that Nataly loves" /></span>
+<img src="image 1.jpg" alt="flowers that Nataly loves" /></span>
 <p>Hello my name is Nataly Parada I am 16 years old,my birthday is on february 4th. I love animals and being with my friends,also I like sports</p>
 </section>
 <section>
 <h2>Fun facts / interesting things about me </h2>
-<p>I am flexible,I used to practice rithmic gymnastics,I won in many competitions,I can not eat food that contains gluten.</p>
+<p>I am flexible,I used to practice rithmic gymnastics,I won in many competitions,I can not eat food that contains gluten.I love to travel around 
+the word</p>
+<span class="image 4">
+<img src="image 4.jpg" alt="favorite hobbie" /></span>
+
 </section>
 <section>
 <h2>Contact / More Info</h2>
-<span class="image 3.jpg">
-<img src="image 4.jpg" alt="photos Nataly like" /></span>
-
+<span class="image 2.jpg">
+<img src="image 2.jpg" alt="favorite flowers of Nataly" /></span>
 <p>If yoy what to get in touch with me you can send me a text at this number right here:62136300</p>
 </section>
 </main>
