--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <main>
 <section>
 <h2> a little about me  / Introduction</h2>
-<span class="image 1.jpg">
+<span class="image 1">
 <img src="image 1.jpg" alt="flowers that Nataly loves" width="300" /></span>
 <p>Hello my name is Nataly Parada I am 16 years old,my birthday is on february 4th. I love animals and being with my friends,also I like sports</p>
 </section>
@@ -28,7 +28,7 @@ the word</p>
 </section>
 <section>
 <h2>Contact / More Info</h2>
-<span class="image 2.jpg">
+<span class="image 2">
 <img src="image 2.jpg" alt="favorite flowers of Nataly" width="300" /></span>
 <p>If yoy what to get in touch with me you can send me a text at this number right here:62136300</p>
 </section>
