--- a/lifestyle-free-magazine-html-template/index.html
+++ b/lifestyle-free-magazine-html-template/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Lifestyle - HTML Template for Magazine and LifeStyle Bloggers</title>
+	<title>Nataly website</title>
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -563,5 +563,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js"></script>
 
 </body>
+
 
 </html>
